[project]
name = "fusion-data-science-resources"
version = "0.1.0"
description = "Curated data science notebooks for training fusion data scientists"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "aeon>=0.9",
    # Install from source: pip install git+https://github.com/ukaea/fair-mast-benchmarks.git
]

[project.optional-dependencies]
book = [
    "jupyter-book>=2",
]
dev = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
